# Modus

./: .env.example  .gitignore  .mcp.json  README.md
backend/: README.md  pyproject.toml
backend/src/modus/: __init__.py  api.py  assumptions.py  cli.py  sensitivity.py
backend/src/modus/audit/: pdf_report.py  report.py  trail.py
backend/src/modus/core/: aggregation.py  engine.py  models.py
backend/src/modus/data/: cache.py  fixtures_loader.py  scenario_store.py  stream.py
backend/src/modus/data/fixtures/: __init__.py  companies.json  index_returns.json  peer_multiples.json  peer_sets.json  precedent_deals.json
backend/src/modus/data/providers/: _env.py  _parsing.py  _sector_map.py  base.py  chain_builder.py  claude_research_provider.py  firecrawl_provider.py  fred_provider.py  mock_provider.py  octagon_provider.py  yfinance_provider.py
backend/src/modus/methods/: _illiquidity.py  base.py  comps.py  dcf.py  last_round.py  precedent_transactions.py
backend/tests/: test_cache.py  test_claude_research_provider.py  test_cli_and_api.py  test_engine.py  test_firecrawl_provider.py  test_methods.py  test_octagon_provider.py  test_pdf_report.py  test_provider_chain.py  test_research.py  test_scenario_api.py  test_scenario_store.py  test_smoke.py
docs/: architecture.md  assumptions.md  demo-scenarios.md  methodology.md
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AuditTrailTimeline.tsx  CommandPalette.tsx  CrossCheckPanel.tsx  MethodBreakdown.tsx  PortfolioNAVDashboard.tsx  ScenarioDiffModal.tsx  (+8 more)
(+17 files in other folders)
